-Boiler tip -Codex Editer (buggy) -Death Bloom -Bloom Meal -Sylph Ember add to more vanila fire things